# shelf-analysis

./: .dockerignore  .env.example  .gitignore  CONFIGURATION.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  docker-start.sh  env.example  nuclear_start.sh  pyproject.toml  requirements.txt  start.sh  start_conda.sh
.github/workflows/: static.yml
comparison/: F1_Analysis_Report.md  FINAL_COMPARISON_REPORT.md  QUICK_SUMMARY.md  README.md  USAGE.md  analyze_judgments.py  analyze_metrics.py  compare_original_annotated.py  comparison_script.py  create_ground_truth_files.py  custom_yolo_comparison.py  gpt_annotation_script.py  ground_truth_annotator.html  index.html  prepare_yolo_dataset.py  visualize_annotations.py
comparison/ground_truth/: IMG_20250728_132729.json  IMG_20250728_132740.json  IMG_20250728_132744.json  IMG_20250728_132747.json  IMG_20250728_132806.json  IMG_20250728_132811.json  IMG_20250728_132825.json  IMG_20250728_132841.json  IMG_20250728_135459.json  IMG_20250728_135505.json  IMG_20250728_135509.json  IMG_20250731_155803.json
comparison/yolo_dataset/: README.md  dataset.yaml  train_yolo.py
comparison/yolo_dataset/train/: labels.cache
comparison/yolo_dataset/val/: labels.cache
models/: README.md
src/shelf_analyzer/: __init__.py  main.py  models.py
src/shelf_analyzer/models/: __init__.py  base_models.py  vision_models.py
src/shelf_analyzer/services/: image_service.py  litellm_vision_service.py  shelf_cropper_service.py  (+2 more)
static/: app.js  index.html  parallel-processor.js  styles.css
tests/: test_api.py  test_litellm_vision.py
(+84 files in other folders)
